--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -16,25 +16,19 @@ services:
       MYSQL_ROOT_PASSWORD_FILE: /var/data/mysql/secrets/root_pass
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    ports:
+      - "3306:3306"
     volumes:
-      - ${JMA_DATABASE}:/var/lib/mysql
-      - ${MYSQL_SECRETS}:/var/data/mysql/secrets
+      - jmfc-database-data:/var/lib/mysql
+      - jmfc-database-secrets:/var/data/mysql/secrets
   jmfc:
     volumes:
       - ./:/var/www/html
-  phpmyadmin:
-    container_name: phpmyadmin
-    image: phpmyadmin:latest
-    environment:
-      PMA_HOST: database
-      PMA_ABSOLUTE_URI: ${JMFC_BASE_URL}/phpmyadmin
-      MYSQL_ROOT_PASSWORD_FILE: /var/data/mysql/secrets/root_pass
-    restart: always
-    volumes:
-      - ${MYSQL_SECRETS}:/var/data/mysql/secrets
-    networks:
-      jenkins:
-        ipv4_address: 172.16.1.30
+volumes:
+  jmfc-database-data:
+    external: true
+  jmfc-database-secrets:
+    external: true
 networks:
   default:
     external:
