--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ volumes:
     external: true
 networks:
   default:
-    external:
-      name: jenkins
+    external: true
+    name: jenkins
   jenkins:
     external: true
