--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -31,7 +31,7 @@ volumes:
     external: true
 networks:
   default:
-    external: true
-    name: jenkins
+    external:
+      name: jenkins
   jenkins:
     external: true
