--- a/docker-compose.team.yml
+++ b/docker-compose.team.yml
@@ -1,6 +1,9 @@
 version: '3'
 services:
-  jmfc:
+  jmfct:
+    container_name: jmfct
+    image: jenkinsluckev/feedback-collector:latest
+    restart: always
     environment:
       - TEAM=1
     volumes:
@@ -10,4 +13,10 @@ services:
         ipv4_address: 172.16.1.222
 volumes:
   jmfct-secrets:
+    external: true
+networks:
+  default:
+    external:
+      name: jenkins
+  jenkins:
     external: true
